# pokemon-tcg-ai-battle4

./: .gitignore
.github/workflows/: ci.yml
boundary_ai/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
boundary_ai/include/boundary_ai/: belief.hpp  boundary_ai.hpp  counts.hpp  evaluation.hpp  information_state.hpp  rational.hpp  reduction.hpp  runtime.hpp  search.hpp
boundary_ai/tests/: benchmark.cpp  exact_bound_merge_test.cpp  ptcg_adapter_compile_test.cpp  test_boundary_ai.cpp
docs/: current-turn-opponent-interactions.md  exact-search.md  general-evaluator.md
ptcg_engine/ptcgProgram 22/: ActivateInfo.h  AddLog.h  AddOption.h  All.h  Api.h  ApiData.h  ApiJson.h  ApiType.h  BattleData.h  Binary.h  BoundarySearch.h  Card.h  CardImpl.h  CardMove.h  Core.h  CreateCard.h  EffectContinual.h  EffectInstant.h  EffectProc.h  ExactBigRational.h  ExactCanonicalState.h  ExactCardLivenessV4.h  ExactCardPartition.h  ExactCpuEvaluator.h  ExactEvaluatorAvx2.cpp  ExactEvaluatorAvx2.h  ExactEvaluatorManifest.h  ExactFeatureRecordV4.h  ExactPassiveExpectationV4.h  ExactPassivePayloadV4.h  ExactPlanner.h  ExactSearchHooks.h  ExactSkeletonDag.h  ExactSparseEvaluatorV3.h  ExactSparseEvaluatorV4.h  Export.cpp  FixedList.h  Framework.h  Game.h  GameFunction.h  (+21 more)
sample_submission/: README_AI.md
sample_submission/sample_submission/: battle_ai.py  deck.csv  main.py  (+6 more)
tools/: bench_gate16.py  build_deck_library.py  evaluate_general_selfplay.py  extract_replay_87096749_fixtures.py  extract_replay_v3_dataset.py  proof_failure_report.py  run_full_retrain.ps1  train_v3_evaluator.py  update_kaggle_replays.ps1
(+42 files in other folders)
